--- a/src/components/SearchBar/result.css
+++ b/src/components/SearchBar/result.css
@@ -1,8 +1,14 @@
+.card {
+    background-color: #212529;
+    background-image: url("https://www.transparenttextures.com/patterns/navy.png"), linear-gradient(0deg, rgba(33,37,41,1) 0%, rgba(0,123,255,1) 7%, rgba(27,52,79,1) 16%, rgba(33,37,41,1) 16%);
+}
+
 .container-result {
     display: flex;
     flex-wrap: wrap;
     max-width: 100%;
     gap: 1rem;
+    color: var(--color-white);
     justify-content: center;
     align-items: center;
     margin: 1rem;
@@ -11,6 +17,12 @@
 .container-result-item {
     width: 225px;
     height: 450px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.container-result-item h5 {
+    font-size: medium;
 }
 .container-result-item img {
     max-width: 250px;
@@ -24,3 +36,36 @@
     justify-content: space-between;
     color: var(--color-black);
 }
+
+.result-item-favori {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding:5px;
+    border-radius: 10px;
+    background-color: var(--color-black);
+    color: var(--color-white);
+}
+.result-item-favori span {
+    border-radius: 5px;
+    background-color: var(--color-white);
+    color: var(--color-black);
+    text-align: center;
+    font-size: large;
+    font-family: "BebasNeue";
+    width: 100%;
+}
+
+.btn-item-hover {
+    color: var(--color-white);
+    border: none;
+    margin-left: 4px;
+    background-color: var(--color-black);
+    transition: 0.3s;
+}
+
+.btn-item-hover:hover{
+    color: var(--color-black);
+    background-color: var(--color-white);
+}
+
