--- a/src/components/SearchBar/result.css
+++ b/src/components/SearchBar/result.css
@@ -35,6 +35,7 @@
     position: absolute;
     padding: 0.4rem;
     opacity: 0;
+    width: 100%;
     height: 100%;
     text-align: center;
     overflow-y: scroll;
@@ -46,8 +47,9 @@
 .effect-hover-img-txt em:hover {
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.8);
-
 }
+
+
 
 .item {
     display: flex;
@@ -87,4 +89,3 @@
     color: var(--color-black);
     background-color: var(--color-white);
 }
-
