--- a/src/settings.css
+++ b/src/settings.css
@@ -48,7 +48,9 @@ ul {
 body {
   margin: 0 auto;
   color: var(--color-grey);
-  background-color: var(--color-black);
+  /* background-color: var(--color-black); */
+  background-color: #000000;
+background-image: url("https://www.transparenttextures.com/patterns/dark-mosaic.png");
 }
 
 h1 {
